contact clippath fix

--- a/alalacampo/components/Contact/Contact.module.scss
+++ b/alalacampo/components/Contact/Contact.module.scss
@@ -5,7 +5,7 @@
   padding-top: 6rem;
   margin-top: 2rem;
   background-color: $primary;
-  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 10%);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 8%);
 
   @media only screen and (max-width: 600px) {
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 3%);
